fix alignments in root page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,6 @@
     height: 100%;
 }
 
-#rootFooter {
-    margin-top: auto;
+#rootDisplay {
+    flex-grow: 1;
 }
